force-app/main/default/objects/KDCE_TnCVersionSet__c/KDCE_TnCVersionSet__c.object-meta.xml
<CustomObject>
    <description>[KDCE]Terms and Conditions Version Set</description>
    <label>Terms and Conditions Version Set</label>
    <nameField>
        <displayFormat>VS-{YY}{MM}{DD}{00000}</displayFormat>
        <label>T&amp;C VersionSet</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions Version Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>