force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>[KDCE] Channel</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>KDCE_Channel</valueSetName>
    </valueSet>
</CustomField>