force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/ChannelNo__c.field-meta.xml
<CustomField>
    <fullName>ChannelNo__c</fullName>
    <description>[KDCE]ChannelOrder 채널별 표시순서.</description>
    <label>Channel No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>