force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/fm_TnCName__c.field-meta.xml
<CustomField>
    <fullName>fm_TnCName__c</fullName>
    <formula>IF(
	AND(
		TEXT(Channel__c) != &apos;getinfo&apos;,
		TaC__r.fm_TnCId__c = &apos;globaloptin&apos;
	),
	&apos;(선택) &apos; + TaC__r.Title__c,
	TaC__r.Title__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;C Name</label>
    <type>Text</type>
</CustomField>