force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/fm_TnCTitle__c.field-meta.xml
<CustomField>
    <fullName>fm_TnCTitle__c</fullName>
    <description>T&amp;C Title</description>
    <formula>&apos;[&apos; +TEXT(TaC__r.KDCE_SubGroup__c) +  TaC__r.KDCE_VersionName__c  + &apos;] &apos; +TaC__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;C Title</label>
    <type>Text</type>
</CustomField>