force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/InfomationOptin__c.field-meta.xml
<CustomField>
    <fullName>InfomationOptin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Infomation Opt-in</description>
    <label>Infomation Opt-in</label>
    <type>Checkbox</type>
</CustomField>