force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/MarketingOptin__c.field-meta.xml
<CustomField>
    <fullName>MarketingOptin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Opt-in</description>
    <label>Marketing Opt-in</label>
    <type>Checkbox</type>
</CustomField>