force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/TaC__c.field-meta.xml
<CustomField>
    <fullName>TaC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Terms and Conditions Lookup Id</description>
    <label>Terms and Conditions</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TermsandConditions__c.KDCE_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TermsandConditions__c</referenceTo>
    <relationshipLabel>Terms and Conditions Version Sets</relationshipLabel>
    <relationshipName>TaCVersionSets</relationshipName>
    <type>Lookup</type>
</CustomField>