force-app/main/default/objects/KDCE_TnCVersionSet__c/fields/TnCVersion__c.field-meta.xml
<CustomField>
    <fullName>TnCVersion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE]T&amp;C Version</description>
    <label>T&amp;C Version</label>
    <referenceTo>KDCE_TnCVersion__c</referenceTo>
    <relationshipLabel>T&amp;C Version Sets</relationshipLabel>
    <relationshipName>TnCVersionSet</relationshipName>
    <type>Lookup</type>
</CustomField>