force-app/main/default/objects/KDCE_TnCVersionSet__c/listViews/After_June_1_2021.listView-meta.xml
<ListView>
    <fullName>After_June_1_2021</fullName>
    <columns>NAME</columns>
    <columns>TnCVersion__c</columns>
    <columns>TaC__c</columns>
    <columns>Channel__c</columns>
    <columns>ChannelNo__c</columns>
    <columns>fm_TnCName__c</columns>
    <columns>InfomationOptin__c</columns>
    <columns>MarketingOptin__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TnCVersion__c</field>
        <operation>contains</operation>
        <value>After June 1,2021</value>
    </filters>
    <label>After June 1, 2021</label>
</ListView>