force-app/main/default/objects/KDCE_TnCVersionSet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TnCVersion__c</columns>
    <columns>TaC__c</columns>
    <columns>fm_TnCName__c</columns>
    <columns>InfomationOptin__c</columns>
    <columns>MarketingOptin__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>